# backend_rust

./: Cargo.toml
apps/: Cargo.toml
apps/src/: main.rs
crates/application/: Cargo.toml
crates/application/src/services/: category_service.rs  mod.rs  program_service.rs
crates/application/src/traits/: category_trait.rs  mod.rs  program_trait.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/category/: entity.rs  repo.rs
crates/domain/src/chapter/: entity.rs  repo.rs
crates/domain/src/lesson/: entity.rs  repo.rs
crates/domain/src/program/: entity.rs  repo.rs
crates/domain/src/user/: entity.rs  repo.rs
crates/infra/: Cargo.toml
crates/infra/src/db/: connection.rs
crates/infra/src/repo/: category_repo.rs  mod.rs  program_repo.rs
crates/interfaces/: Cargo.toml
crates/interfaces/src/: lib.rs
crates/interfaces/src/doc/: api_doc.rs
crates/interfaces/src/errors/: error.rs
crates/interfaces/src/handlers/: category_handler.rs  mod.rs  program_hanlder.rs
crates/interfaces/src/routes/: category_route.rs  mod.rs  program_route.rs
crates/interfaces/src/state/: app_state.rs
crates/shared/: Cargo.toml
crates/shared/src/dto/: category.rs  mod.rs  program.rs
migrations/: 20260316034506_create_programs_table.down.sql  20260316034506_create_programs_table.up.sql
