[workspace]
members = [
    "crates/domain",
    "crates/application",
    "crates/infra",
    "apps",
    "crates/interfaces",
    "crates/shared",
]
resolver = "3"


[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.102"
