[package]
name = "apps"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenvy = "0.15"
utoipa = "5.3.1"
tracing = "0.1"
tracing-subscriber = "0.3"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }


tokio = { workspace = true }

domain = { path = "../crates/domain" }
infra = { path = "../crates/infra" }
interfaces = { path = "../crates/interfaces" }
application = { path = "../crates/application" }
