[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
] }
utoipa = { version = "5.0" }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
async-trait = "0.1.89"
