[package]
name = "infra"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
] }
async-trait = "0.1.89"
uuid = { workspace = true }
anyhow = "1.0.102"

domain = { path = "../domain" }
